Removed interacting-users width and fixed alignment

--- a/core/app/assets/stylesheets/bubble/tabs.css.less
+++ b/core/app/assets/stylesheets/bubble/tabs.css.less
@@ -65,11 +65,10 @@
 
     &.interacting-users {
       float: right;
-      width: 72px;
 
       ul {
         padding: 0px;
-        margin: -3px 0;
+        margin: -3px 0 0;
         li {
           float:right;
           padding: 0;
@@ -85,8 +84,6 @@
 }
 
 .tab-content {
-  /*margin-top: -2px;*/
-
   .arrowDown(@width: 10px, @color: @whiteDarker) {
     position: absolute;
     margin-top: -1px;
